--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
 
     <form class="contact-form" action="/api/schemeForm" method="POST">
         <h2>Contact Us</h2>
+        <h3>This is the way</h3>
 
         <label for="name">Full Name</label>
         <input type="text" id="name" name="name" placeholder="Enter your full name" required>
